# billing-snakemake

./: README.md  Snakefile  pyproject.toml
workflow/: Snakefile
workflow/envs/: cbs-server-billing.yaml  tectonic.yaml
workflow/scripts/: billing.py  gen_bills.py  grand_total.py
